# Coin-Platform-2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
cmake/modules/: FindDependencies.cmake
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  genesis_blocks.hpp  genesis_reference.hpp  types.hpp  utilities.cpp  utilities.hpp
src/config/: CMakeLists.txt  config.cpp  config.hpp
src/consensus/: CMakeLists.txt  consensus_interface.hpp  time_chain_consensus.cpp  time_chain_consensus.hpp  value_chain_consensus.cpp  value_chain_consensus.hpp
src/cryptography/: CMakeLists.txt  cryptography.cpp  cryptography.hpp  schnorr_signature.cpp  schnorr_signature.hpp
src/networking/: CMakeLists.txt  network_manager.cpp  network_manager.hpp
src/node/: CMakeLists.txt  node.cpp  node.hpp
src/storage/: CMakeLists.txt  file_storage.hpp  file_storage.tpp  storage_interface.hpp
src/time_chain/: CMakeLists.txt  time_block.cpp  time_block.hpp  time_chain.cpp  time_chain.hpp
src/value_chain/: CMakeLists.txt  transaction.cpp  transaction.hpp  value_block.cpp  value_block.hpp  value_chain.cpp  value_chain.hpp
tests/: CMakeLists.txt  test_main.cpp
tools/: CMakeLists.txt
tools/genesis_generator/: CMakeLists.txt  genesis_generator.cpp  genesis_generator.hpp  main_genesis_generator.cpp
tools/keygen/: CMakeLists.txt  keygen.cpp
